// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`work-package walk snapshots (baseline) > [default] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "default",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "path_gating_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "portfolio-{lens_name}.md",
        "portfolio-synthesis.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-portfolio-lens_name.md",
        "15-portfolio-synthesis.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "select-area",
        "portfolio-lens-pass",
        "update-artifact",
        "revise-open-questions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "assumption-decision#{current_assumption.id}",
          "option": "accept",
          "setVariable": {
            "assumption_resolved_inline": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "present-assumption",
        "record-decision",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-pre-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "conduct-retrospective",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [elicitation-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "elicitation-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "elicitation-only",
          "setVariable": {
            "needs_elicitation": true,
            "needs_research": false,
            "problem_complexity": "moderate",
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "portfolio-{lens_name}.md",
        "portfolio-synthesis.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-portfolio-lens_name.md",
        "15-portfolio-synthesis.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "select-area",
        "portfolio-lens-pass",
        "update-artifact",
        "revise-open-questions",
      ],
      "unresolved": [],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "03-requirements-elicitation.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": {
            "has_stakeholder_input": true,
          },
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "ask-question",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "assumption-decision#{current_assumption.id}",
          "option": "accept",
          "setVariable": {
            "assumption_resolved_inline": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "present-assumption",
        "record-decision",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-pre-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "conduct-retrospective",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [full-workflow] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "requirements-elicitation",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "full-workflow",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "full-workflow",
          "setVariable": {
            "needs_elicitation": true,
            "needs_research": true,
            "problem_complexity": "complex",
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "portfolio-{lens_name}.md",
        "portfolio-synthesis.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-portfolio-lens_name.md",
        "15-portfolio-synthesis.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "requirements-elicitation",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "select-area",
        "portfolio-lens-pass",
        "update-artifact",
        "revise-open-questions",
      ],
      "unresolved": [],
    },
    {
      "activity": "requirements-elicitation",
      "artifacts": [
        "requirements-elicitation.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "03-requirements-elicitation.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "stakeholder-transcript",
          "option": "provide-transcript",
          "setVariable": {
            "has_stakeholder_input": true,
          },
        },
        {
          "id": "elicitation-complete",
          "option": "complete",
          "setVariable": {
            "elicitation_complete": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "stakeholder-discussion",
        "elicit-requirements",
        "ask-question",
        "collect-assumptions",
        "create-document",
        "update-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "04-kb-research.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "context-scope-declaration",
          "option": "repo-only",
          "setVariable": {
            "context_scope": "repo-only",
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "research-knowledge-base",
        "synthesize",
        "triage-research-candidates",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "assumption-decision#{current_assumption.id}",
          "option": "accept",
          "setVariable": {
            "assumption_resolved_inline": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "present-assumption",
        "record-decision",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-pre-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "dispatch-prism",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "conduct-retrospective",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [research-only] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "research",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "research-only",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "research-only",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": true,
            "problem_complexity": "moderate",
            "skip_optional_activities": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "portfolio-{lens_name}.md",
        "portfolio-synthesis.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-portfolio-lens_name.md",
        "15-portfolio-synthesis.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "research",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "select-area",
        "portfolio-lens-pass",
        "update-artifact",
        "revise-open-questions",
      ],
      "unresolved": [],
    },
    {
      "activity": "research",
      "artifacts": [
        "kb-research.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "04-kb-research.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "context-scope-declaration",
          "option": "repo-only",
          "setVariable": {
            "context_scope": "repo-only",
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "research-knowledge-base",
        "synthesize",
        "triage-research-candidates",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "assumption-decision#{current_assumption.id}",
          "option": "accept",
          "setVariable": {
            "assumption_resolved_inline": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "present-assumption",
        "record-decision",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-pre-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "create-adr",
        "update-adr-status",
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "conduct-retrospective",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [review-mode] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "implementation-analysis",
    "plan-prepare",
    "assumptions-review",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "review-mode",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
      ],
      "checkpoints": [
        {
          "id": "review-mode-detection",
          "option": "confirm-review",
          "setVariable": {
            "is_review_mode": true,
          },
        },
        {
          "id": "review-pr-reference",
          "option": "pr-provided",
          "setVariable": {
            "review_pr_captured": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "detect-review-mode",
        "capture-pr-reference",
        "ingest-prior-feedback",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "compute-canonical-target-path",
        "create-review-worktree",
        "check-branch",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "ticket-completeness",
          "option": "proceed-with-gaps",
          "setVariable": {
            "ticket_gaps_documented": true,
            "ticket_refactor_needed": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
        "assess-ticket-completeness",
        "set-review-mode-path",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "portfolio-{lens_name}.md",
        "portfolio-synthesis.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-portfolio-lens_name.md",
        "15-portfolio-synthesis.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "implementation-analysis",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "select-area",
        "portfolio-lens-pass",
        "update-artifact",
        "revise-open-questions",
      ],
      "unresolved": [],
    },
    {
      "activity": "implementation-analysis",
      "artifacts": [
        "implementation-analysis.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "05-implementation-analysis.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "analysis-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-baseline-state",
        "analyze-implementation",
        "collect-assumptions",
        "document",
        "update-assumptions-log",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "present-assumption",
        "record-decision",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "document-failures",
        "assess-test-coverage",
        "triage-reported-failures",
      ],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "document-cleanup-recommendations",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "review-summary-approval",
          "option": "post-review",
          "setVariable": {
            "review_posted": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "consolidate-review-findings",
        "generate-review-summary",
        "present-summary-to-user",
        "post-pr-review",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "conduct-retrospective",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;

exports[`work-package walk snapshots (baseline) > [skip-optional] matches committed baseline 1`] = `
{
  "finalStatus": "completed",
  "initialActivity": "start-work-package",
  "orchestratorUnresolved": [],
  "path": [
    "start-work-package",
    "design-philosophy",
    "codebase-comprehension",
    "plan-prepare",
    "assumptions-review",
    "implement",
    "lean-coding-audit",
    "post-impl-review",
    "validate",
    "strategic-review",
    "submit-for-review",
    "complete",
  ],
  "policy": "skip-optional",
  "steps": [
    {
      "activity": "start-work-package",
      "artifacts": [
        "prior-feedback-triage.md",
      ],
      "artifactsWritten": [
        "01-prior-feedback-triage.md",
      ],
      "checkpoints": [
        {
          "id": "issue-verification",
          "option": "provide-existing",
          "setVariable": {
            "needs_issue_creation": false,
          },
        },
        {
          "id": "pr-creation",
          "option": "proceed",
          "setVariable": {
            "pr_skipped": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "design-philosophy",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "resolve-reference",
        "analyze-reference-with-gitnexus",
        "verify-signing-precondition",
        "detect-merge-strategy",
        "detect-project-type",
        "check-issue",
        "bind-planning-folder-path",
        "initialize-planning-folder",
        "present-problem-overview",
        "derive-branch-name",
        "compute-canonical-target-path",
        "create-component-worktree",
        "check-branch",
        "check-pr",
        "create-pr",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "design-philosophy",
      "artifacts": [
        "design-philosophy.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-design-philosophy.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "classification-and-path-confirmed",
          "option": "skip-optional",
          "setVariable": {
            "needs_elicitation": false,
            "needs_research": false,
            "path_gating_complexity": "simple",
            "skip_optional_activities": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "codebase-comprehension",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "define-problem",
        "classify-problem",
        "determine-path",
        "document-philosophy",
        "collect-assumptions",
        "create-assumptions-log",
        "reconcile-assumptions",
      ],
      "unresolved": [],
    },
    {
      "activity": "codebase-comprehension",
      "artifacts": [
        "{codebase_area}.md",
        "portfolio-{lens_name}.md",
        "portfolio-synthesis.md",
      ],
      "artifactsWritten": [
        "15-codebase_area.md",
        "15-portfolio-lens_name.md",
        "15-portfolio-synthesis.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": "plan-prepare",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "build-comprehension",
        "create-comprehension-artifact",
        "initial-deep-dive",
        "initial-lens-pass",
        "update-artifact-initial",
        "revise-initial-questions",
        "select-area",
        "portfolio-lens-pass",
        "update-artifact",
        "revise-open-questions",
      ],
      "unresolved": [],
    },
    {
      "activity": "plan-prepare",
      "artifacts": [
        "work-package-plan.md",
        "test-plan.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "06-work-package-plan.md",
        "06-test-plan.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "approach-confirmed",
          "option": "confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "assumptions-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "env-prerequisites",
        "create-plan",
        "create-test-plan",
        "present-solution-overview",
        "collect-assumptions",
        "update-assumptions-log",
        "reconcile-assumptions",
        "create-todos",
        "sync-branch",
        "update-pr",
      ],
      "unresolved": [],
    },
    {
      "activity": "assumptions-review",
      "artifacts": [
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "assumption-decision#{current_assumption.id}",
          "option": "accept",
          "setVariable": {
            "assumption_resolved_inline": true,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "implement",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "evaluate-open-assumptions",
        "present-assumption",
        "record-decision",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "implement",
      "artifacts": [
        "provenance-log.md",
        "assumptions-log.md",
      ],
      "artifactsWritten": [
        "08-provenance-log.md",
        "02-assumptions-log.md",
      ],
      "checkpoints": [
        {
          "id": "switch-model-pre-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
        {
          "id": "switch-model-post-impl",
          "option": "continue-current",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "warning",
      "next": "lean-coding-audit",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "verify-preconditions",
        "implement-task",
        "run-tests",
        "commit",
        "log-provenance",
        "self-review",
        "collect-assumptions",
        "reconcile-assumptions",
        "present-resolved-assumptions",
        "interview-open-assumptions",
        "present-assumption",
        "record-response",
        "update-assumptions-log",
      ],
      "unresolved": [],
    },
    {
      "activity": "lean-coding-audit",
      "artifacts": [
        "debt-ledger.md",
        "lean-change.md",
      ],
      "artifactsWritten": [
        "09-debt-ledger.md",
        "09-lean-change.md",
      ],
      "checkpoints": [
        {
          "id": "audit-findings-confirmed",
          "option": "audit-accepted",
          "setVariable": {
            "audit_confirmed": true,
          },
        },
      ],
      "manifestStatus": "warning",
      "next": "post-impl-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-over-engineering",
        "harvest-debt",
      ],
      "unresolved": [],
    },
    {
      "activity": "post-impl-review",
      "artifacts": [
        "change-block-index.md",
        "code-review.md",
        "structural-analysis.md",
        "test-suite-review.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "10-change-block-index.md",
        "10-code-review.md",
        "10-structural-analysis.md",
        "10-test-suite-review.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [
        {
          "id": "file-index-table",
          "option": "rationale-confirmed",
          "setVariable": undefined,
        },
      ],
      "manifestStatus": "valid",
      "next": "validate",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "gitnexus-detect-changes-preflight",
        "manual-diff-review",
        "code-review",
        "structural-analysis-inline",
        "test-suite-review",
        "architecture-summary",
        "classify-and-route-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "validate",
      "artifacts": [
        "test-suite-review.md",
      ],
      "artifactsWritten": [
        "10-test-suite-review.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "strategic-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [],
      "unresolved": [],
    },
    {
      "activity": "strategic-review",
      "artifacts": [
        "strategic-review-{n}.md",
        "architecture-summary.md",
      ],
      "artifactsWritten": [
        "12-strategic-review-n.md",
        "10-architecture-summary.md",
      ],
      "checkpoints": [],
      "manifestStatus": "warning",
      "next": "submit-for-review",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "review-strategy",
        "verify-readme",
        "verify-artifact-conformance",
        "ensure-changes-folder-entry",
        "verify-change-fragment",
        "document-findings",
        "apply-cleanup",
        "create-architecture-summary",
        "analyze-strategic-findings",
      ],
      "unresolved": [],
    },
    {
      "activity": "submit-for-review",
      "artifacts": [
        "{YYYY-MM-DD}-pr{pr_number}-review-analysis.md",
      ],
      "artifactsWritten": [
        "13-YYYY-MM-DD-prpr_number-review-analysis.md",
      ],
      "checkpoints": [
        {
          "id": "dco-sign-off-confirmation",
          "option": "certify",
          "setVariable": undefined,
        },
        {
          "id": "body-non-conformant",
          "option": "proceed-with-override",
          "setVariable": {
            "body_conforms": true,
            "body_override_recorded": true,
          },
        },
        {
          "id": "review-outcome",
          "option": "approved",
          "setVariable": {
            "review_requires_changes": false,
          },
        },
      ],
      "manifestStatus": "valid",
      "next": "complete",
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "announce-start",
        "dco-sign-off",
        "push-commits",
        "update-description",
        "rerender-body",
        "verify-body",
        "instruct-merge-strategy",
        "mark-ready",
        "process-review-comments",
        "analyze-review-outcome",
        "announce-completion",
      ],
      "unresolved": [],
    },
    {
      "activity": "complete",
      "artifacts": [
        "NNNN-{decision_title}.md",
        "COMPLETE.md",
        "token-usage.md",
      ],
      "artifactsWritten": [
        "14-NNNN-decision_title.md",
        "14-COMPLETE.md",
        "14-token-usage.md",
      ],
      "checkpoints": [],
      "manifestStatus": "valid",
      "next": null,
      "orphanCheckpoints": [],
      "stepsExecuted": [
        "finalize-test-plan",
        "create-complete-doc",
        "render-token-usage",
        "ensure-docs",
        "conduct-retrospective",
        "select-next",
        "announce-completion",
      ],
      "unresolved": [],
    },
  ],
  "workflowId": "work-package",
}
`;
